Update debian compat version to 9

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: kde
 Priority: optional
 Maintainer: David Suárez <david.sephirot@gmail.com>
 Build-Depends: cmake,
-               debhelper (>= 7.0.50~),
+               debhelper (>= 9.0.0),
                kdelibs5-dev,
                libqca2-dev,
                libqca2-plugin-ossl,
