Imported Upstream version 0.5.1

--- a/kcm/kcm_kdeconnect.desktop
+++ b/kcm/kcm_kdeconnect.desktop
@@ -14,7 +14,7 @@ X-KDE-System-Settings-Parent-Category=hardware
 Name=KDE Connect
 Name[bs]=Konekcija KDE
 Name[da]=KDE Connect
-Name[de]=KDE Connect
+Name[de]=KDE-Connect
 Name[es]=KDE Connect
 Name[fr]=KDE Connect
 Name[hu]=KDE csatlakozás
