--- a/kcm/kdeconnect.desktop
+++ b/kcm/kdeconnect.desktop
@@ -6,7 +6,7 @@ Exec=kcmshell4 kcm_kdeconnect
 Name=KDE Connect
 Name[bs]=Konekcija KDE
 Name[da]=KDE Connect
-Name[de]=KDE Connect
+Name[de]=KDE-Connect
 Name[es]=KDE Connect
 Name[fr]=KDE Connect
 Name[hu]=KDE csatlakozás
@@ -21,7 +21,9 @@ Name[tr]=KDE Bağlan
 Name[uk]=З’єднання KDE
 Name[x-test]=xxKDE Connectxx
 GenericName=Connect smartphones to your KDE Plasma Workspace
+GenericName[da]=Forbind smartphones med din KDE Plasma Workspace
 GenericName[de]=Verbindung von Smartphones mit demKDE-Plasma-Arbeitsbereich
+GenericName[fr]=Connectez votre smartphone à votre espace de travail KDE Plasma
 GenericName[hu]=Okostelefonok csatlakoztatása a KDE Plasma munkaterülethez
 GenericName[nl]=Smartphones verbinden met uw KDE Plasma werkruimte
 GenericName[pt]=Ligue os 'smartphones' à sua Área de Trabalho do KDE
