--- a/kded/kdeconnect.desktop
+++ b/kded/kdeconnect.desktop
@@ -11,7 +11,7 @@ X-KDE-Kded-phase=1
 Name=KDE Connect
 Name[bs]=Konekcija KDE
 Name[da]=KDE Connect
-Name[de]=KDE Connect
+Name[de]=KDE-Connect
 Name[es]=KDE Connect
 Name[fr]=KDE Connect
 Name[hu]=KDE csatlakozás
