--- a/kded/plugins/sftp/kdeconnect_sftp.desktop
+++ b/kded/plugins/sftp/kdeconnect_sftp.desktop
@@ -12,7 +12,9 @@ X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-EnabledByDefault=true
 Icon=system-file-manager
 Name=Remote filesystem browser
+Name[da]=Gennemse eksternt filsystem
 Name[de]=Datei-Browser für entferne Systeme
+Name[fr]=Contrôlez à distance le navigateur du système de fichiers
 Name[hu]=Távoli fájlrendszer böngésző
 Name[nl]=Bestandssysteembrowser op afstand
 Name[pt]=Navegador do sistema de ficheiros remoto
@@ -22,7 +24,9 @@ Name[sv]=Fjärrfilsystembläddrare
 Name[uk]=Перегляд віддалених файлових систем
 Name[x-test]=xxRemote filesystem browserxx
 Comment=Browse the remote device filesystem using SFTP
+Comment[da]=Gennemse filsystemet på den eksterne enhed med SFTP
 Comment[de]=Browsen im Dateisystem des entfernten Geräts mit SFTP
+Comment[fr]=Visualiser le système de fichiers de l'appareil distant en utilisant SFTP
 Comment[hu]=A távoli eszköz fájlrendszerének böngészése SFTP használatával
 Comment[nl]=Blader door het bestandssysteem met SFTP op het apparaat op afstand
 Comment[pt]=Navegue pelo sistema de ficheiros do dispositivo por SFTP
