Imported Upstream version 0.5.2.1

--- a/kded/kdeconnect.desktop
+++ b/kded/kdeconnect.desktop
@@ -10,15 +10,19 @@ X-KDE-Kded-phase=1
 
 Name=KDE Connect
 Name[bs]=Konekcija KDE
+Name[cs]=KDE Connect
 Name[da]=KDE Connect
 Name[de]=KDE-Connect
 Name[es]=KDE Connect
 Name[fr]=KDE Connect
 Name[hu]=KDE csatlakozás
 Name[it]=KDE Connect
+Name[ko]=KDE Connect
 Name[nl]=KDE Connect
+Name[pl]=KDE Connect
 Name[pt]=KDE Connect
 Name[pt_BR]=KDE Connect
+Name[ro]=KDE Connect
 Name[ru]=KDE Connect
 Name[sk]=KDE Connect
 Name[sv]=KDE anslut
@@ -28,13 +32,16 @@ Name[x-test]=xxKDE Connectxx
 
 Comment=Connect KDE with your smartphone
 Comment[bs]=Konektujte  se na KDE sa Vašim mobitelom
+Comment[cs]=Propojte KDE s vaším telefonem 
 Comment[da]=Forbind KDE med din smartphone
 Comment[de]=KDE mit Ihren Smartphone verbinden
 Comment[es]=Conecte KDE con su teléfono móvil
 Comment[fr]=Connectez KDE avec votre smartphone
 Comment[hu]=A KDE csatlakoztatása az okostelefonnal
 Comment[it]=Connetti KDE con il tuo smartphone
+Comment[ko]=KDE와 스마트폰 연결
 Comment[nl]=KDE met uw smartphone verbinden
+Comment[pl]=Podłącz swój smartfon do KDE
 Comment[pt]=Ligue o KDE ao seu telemóvel
 Comment[pt_BR]=Conecte o KDE ao seu celular
 Comment[ru]=Подключайте смартфон к KDE
