--- a/kded/plugins/battery/kdeconnect_battery.desktop
+++ b/kded/plugins/battery/kdeconnect_battery.desktop
@@ -20,9 +20,12 @@ Name[es]=Monitor de la batería
 Name[fr]=Moniteur de batterie
 Name[hu]=Akkumulátorfigyelő
 Name[it]=Monitor batteria
+Name[ko]=배터리 모니터
 Name[nl]=Batterijmonitor
+Name[pl]=Monitor baterii
 Name[pt]=Monitor da bateria
 Name[pt_BR]=Monitor de bateria
+Name[ro]=Monitorul acumulatorului
 Name[ru]=Индикатор батареи
 Name[sk]=Monitor batérie
 Name[sv]=Batteriövervakare
@@ -31,13 +34,16 @@ Name[uk]=Монітор акумулятора
 Name[x-test]=xxBattery monitorxx
 Comment=Show your phone battery next to your computer battery
 Comment[bs]=Prikažite Vašu bateriju sa mobilnog telefona poted Vaše računarske baterije
+Comment[cs]=Zobrazit baterku vašeho telefonu vedle baterie vašeho notebooku
 Comment[da]=Vis dit telefonbatteri ved siden af din computers batteri
 Comment[de]=Zeigt den Akku Ihres Telefons neben dem Akku des Rechners
 Comment[es]=Muestra la batería de su teléfono junto a la batería de su equipo
 Comment[fr]=Affichez la batterie de votre téléphone près de la batterie de votre téléphone
 Comment[hu]=A telefon akkumulátorának megjelenítése a számítógép akkumulátora mellett
 Comment[it]=Mostra il livello batteria del tuo telefono accanto a quella del computer
+Comment[ko]=폰 배터리와 컴퓨터 배터리 동시 확인
 Comment[nl]=Uw telefoonbatterij naast uw computerbatterij tonen
+Comment[pl]=Pokaż baterię swojego telefonu obok baterii komputera
 Comment[pt]=Mostra a bateria do seu telemóvel ao lado da do computador
 Comment[pt_BR]=Mostra a bateria do seu celular ao lado da bateria do computador
 Comment[ru]=Показывать значок батареи устройства рядом со значком батареи компьютера
