--- a/kded/plugins/clipboard/kdeconnect_clipboard.desktop
+++ b/kded/plugins/clipboard/kdeconnect_clipboard.desktop
@@ -20,9 +20,12 @@ Name[es]=Portapapeles
 Name[fr]=Presse-papiers
 Name[hu]=Vágólap
 Name[it]=Appunti
+Name[ko]=클립보드
 Name[nl]=Klembord
+Name[pl]=Schowek
 Name[pt]=Área de Transferência
 Name[pt_BR]=Área de transferência
+Name[ro]=Clipboard
 Name[ru]=Буфер обмена
 Name[sk]=Schránka
 Name[sv]=Klippbord
@@ -31,15 +34,19 @@ Name[uk]=Буфер обміну
 Name[x-test]=xxClipboardxx
 Comment=Share the clipboard between devices
 Comment[bs]=Podijeli Clipboard među uređajima
+Comment[cs]=Sdílejte schránku mezi zařízeními
 Comment[da]=Del indholdet af udklipsholderen mellem enheder
 Comment[de]=Die Zwischenablage mit Geräten teilen
 Comment[es]=Compartir el portapapeles entre dispositivos
 Comment[fr]=Partagez le presse-papiers entre périphériques
 Comment[hu]=Vágólap megosztása az eszközök között
 Comment[it]=Condividi gli appunti tra i dispositivi
+Comment[ko]=장치간 클립보드 공유
 Comment[nl]=Het klembord tussen apparaten delen
+Comment[pl]=Współdziel schowek pomiędzy urządzeniami
 Comment[pt]=Partilhar a área de transferência entre dispositivos
 Comment[pt_BR]=Compartilhar a área de transferência entre dispositivos
+Comment[ro]=Partajează clipboardul între dispozitive
 Comment[ru]=Общий буфер обмена для всех устройств
 Comment[sk]=Zdieľať schránku medzi zariadeniami
 Comment[sv]=Dela klippbordet mellan apparater
