--- a/kded/plugins/kdeconnect_plugin.desktop
+++ b/kded/plugins/kdeconnect_plugin.desktop
@@ -4,15 +4,19 @@ X-KDE-ServiceType=KdeConnect/Plugin
 X-KDE-Derived=KPluginInfo
 Name=KDEConnect Plugin
 Name[bs]=Priključak za KDE konekciju
+Name[cs]=Modul KDEConnect
 Name[da]=KDEConnect-plugin
 Name[de]=KDEConnect-Modul
 Name[es]=Complemento de KDEConnect
 Name[fr]=Module externe KDEConnect
 Name[hu]=KDEConnect bővítmény
 Name[it]=Estensione KDEConnect
+Name[ko]=KDEConnect 플러그인
 Name[nl]=Plug-in van KDEConnect
+Name[pl]=Wtyczka KDEConnect
 Name[pt]='Plugin' do KDEConnect
 Name[pt_BR]=Plugin do KDEConnect
+Name[ro]=Extensie KDEConnect
 Name[ru]=Модуль KDEConnect
 Name[sk]=Plugin KDEConnect
 Name[sv]=KDE anslutningsinsticksprogram
