--- a/kded/plugins/notifications/kdeconnect_notifications.desktop
+++ b/kded/plugins/notifications/kdeconnect_notifications.desktop
@@ -13,15 +13,19 @@ X-KDE-PluginInfo-EnabledByDefault=true
 Icon=preferences-desktop-notification
 Name=Notification sync
 Name[bs]=Sinhronizovano obavještenje
+Name[cs]=Synchronizace hlášení
 Name[da]=Synk. af bekendtgørelser
 Name[de]=Benachrichtigungs-Abgleich
 Name[es]=Sincronizar notificaciones
 Name[fr]=Synchronisation de notifications
 Name[hu]=Értesítés szinkronizáció
 Name[it]=Sincronizzazione notifiche
+Name[ko]=알림 동기화
 Name[nl]=Synchronisatie van meldingen
+Name[pl]=Powiadomienia synchronizacji
 Name[pt]=Sincronização de notificações
 Name[pt_BR]=Sincronização de notificações
+Name[ro]=Sincronizare notificări
 Name[ru]=Синхронизация уведомлений
 Name[sk]=Synchronizácia pripomienok
 Name[sv]=Synkronisering av underrättelser
@@ -30,13 +34,16 @@ Name[uk]=Синхронізація сповіщень
 Name[x-test]=xxNotification syncxx
 Comment=Show phone notifications in KDE and keep them in sync
 Comment[bs]=Prikaži objavještenja sa mobitela u KDE i održavaj ih sinhronizovanim
+Comment[cs]=Zobrazit upozornění z telefonu v KDE a udržovat je synchronizovaná
 Comment[da]=Vis telefonbekendtgørelser i KDE og hold dem synkroniseret
 Comment[de]=Benachrichtigungen in KDE anzeigen und abgleichen
 Comment[es]=Mostrar las notificaciones del teléfono en KDE y mantenerlas sincronizadas
 Comment[fr]=Affichez les notifications du téléphone dans KDE et conservez-les lors de la synchronisation
 Comment[hu]=Telefonértesítések megjelenítése a KDE-ben és szinkronizálva tartása
 Comment[it]=Mostra e sincronizza le notifiche del telefono in KDE
+Comment[ko]=폰 알림을 KDE에 표시하고 동기화 유지
 Comment[nl]=Telefoonmeldingen in KDE tonen en ze gesynchroniseerd houden
+Comment[pl]=Pokaż powiadomienia telefonu w KDE i synchronizuj je
 Comment[pt]=Mostrar as notificações do telefone no KDE e mantê-las sincronizadas
 Comment[pt_BR]=Mostra as notificações do celular no KDE e as mantem sincronizadas
 Comment[ru]=Показывать телефонные уведомления в KDE и синхронизировать их
