--- a/kded/plugins/ping/kdeconnect_ping.desktop
+++ b/kded/plugins/ping/kdeconnect_ping.desktop
@@ -20,9 +20,12 @@ Name[es]=Ping
 Name[fr]=Commande « Ping »
 Name[hu]=Ping
 Name[it]=Ping
+Name[ko]=핑
 Name[nl]=Ping
+Name[pl]=Ping
 Name[pt]=Pedido de Rede
 Name[pt_BR]=Ping
+Name[ro]=Ping
 Name[ru]=Пинг
 Name[sk]=Ping
 Name[sv]=Ping
@@ -38,9 +41,12 @@ Comment[es]=Enviar y recibir pings
 Comment[fr]=Envoyez et recevez des « ping »
 Comment[hu]=Pingek küldése és fogadása
 Comment[it]=Invia e ricevi ping
+Comment[ko]=핑 보내고 받기
 Comment[nl]=Pings verzenden en ontvangen
+Comment[pl]=Wysyłaj i otrzymuj pingi
 Comment[pt]=Enviar e receber pedidos de rede
 Comment[pt_BR]=Envia e recebe pings
+Comment[ro]=Trimite și primește ping-uri
 Comment[ru]=Посылать и получать пинги
 Comment[sk]=Poslať a prijať pingy
 Comment[sv]=Skicka och ta emot ping
