--- a/plasmoid/package/metadata.desktop
+++ b/plasmoid/package/metadata.desktop
@@ -8,9 +8,12 @@ Name[es]=KdeConnect
 Name[fr]=KdeConnect
 Name[hu]=KdeConnect
 Name[it]=KdeConnect
+Name[ko]=KdeConnect
 Name[nl]=KdeConnect
+Name[pl]=KdeConnect
 Name[pt]=KDEConnect
 Name[pt_BR]=KdeConnect
+Name[ro]=KdeConnect
 Name[ru]=KdeConnect
 Name[sk]=KdeConnect
 Name[sv]=KDE anslut
@@ -19,13 +22,16 @@ Name[uk]=KdeConnect
 Name[x-test]=xxKdeConnectxx
 Comment=Show notifications from your devices using KDE Connect
 Comment[bs]=Prikaži obavlještenja sa uređaja koji koriste KDE konekciju
+Comment[cs]=Zobrazit upozornění z vašich zařízení pomocí KDE Connect
 Comment[da]=Vis bekendtgørelser fra dine enheder med KDE Connect
 Comment[de]=Zeigt Benachrichtigungen von Ihren Geräten mit KDE-Connect
 Comment[es]=Mostrar notificaciones de sus dispositivos usando KDE Connect
-Comment[fr]=Afficher les notifications provenant de vos périphériques à l'aide de KDE Connect
+Comment[fr]=Afficher les notifications provenant de vos périphériques à l'aide de KDE Connect
 Comment[hu]=Az eszközökről származó értesítések megjelenítése a KDE csatlakozás használatával
 Comment[it]=Mostra le notifiche dei tuoi dispositivi tramite KDE Connect
+Comment[ko]=KDE Connect로 장치에 표시된 알림 보기
 Comment[nl]=Meldingen van uw apparaten met KDE Connect tonen
+Comment[pl]=Pokaż powiadomienia ze swoich urządzeń przy użyciu KDE Connect
 Comment[pt]=Mostrar notificações dos seus dispositivos usando o KDE Connect
 Comment[pt_BR]=Mostrar notificações dos seus dispositivos usando o KDE Connect
 Comment[ru]=Показывать уведомления от устройств с помощью KDE Connect
