--- a/debian/control
+++ b/debian/control
@@ -11,8 +11,8 @@ Build-Depends: cmake,
                pkg-kde-tools
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/playground/base/kdeconnect-kde
-Vcs-Git: git://github.com/deiv/kdeconnect-pkg.git
-Vcs-Browser: https://github.com/deiv/kdeconnect-pkg
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-extras/kdeconnect.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-extras/kdeconnect.git;a=summary
 
 Package: kdeconnect
 Architecture: any
