More development files to remove

--- a/debian/rules
+++ b/debian/rules
@@ -13,5 +13,9 @@ CXXFLAGS+=$(CPPFLAGS)
 
 override_dh_auto_install:
 	dh_auto_install
+	
 	# remove '-dev' related files
-	rm debian/kdeconnect/usr/lib/libkdeconnect.so
+	$(RM) debian/kdeconnect/usr/lib/libkdeconnectcore.so
+	$(RM) debian/kdeconnect/usr/lib/libkdeconnectinterfaces.so
+	$(RM) -R debian/kdeconnect/usr/include
+	$(RM) -R debian/kdeconnect/usr/lib/cmake/
