--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,9 @@ Build-Depends: cmake,
                libqca2-plugin-ossl,
                libqjson-dev,
                libxtst-dev,
-               pkg-kde-tools
+               pkg-kde-tools,
+               libfakekey-dev,
+               libdbus-1-dev
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/playground/base/kdeconnect-kde
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-extras/kdeconnect.git
